reformat code and add params of item info
